--- a/Views/Evaluations/ListComments.cshtml
+++ b/Views/Evaluations/ListComments.cshtml
@@ -1,18 +1,18 @@
 ﻿@model IEnumerable<Airbnb_PWEB.Models.Evaluation>
 
-<h1>Lista de Comentários da Propriedade</h1>
+<h1>Property Reviews</h1>
 
 <table class="table" id="mytable">
     <thead>
         <tr>
             <th>
-                Nome
+                Client
             </th>
             <th>
-                Classificação
+                Classification
             </th>
             <th>
-                Comentário
+                Comment
             </th>
         </tr>
     </thead>
