--- a/Views/Roles/Details.cshtml
+++ b/Views/Roles/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Airbnb_PWEB.Models.RoleViewModel
 
-<h1> Detalhes @Model.Nome</h1>
+<h1> Details @Model.Nome</h1>
 <br />
 <br />
 <table class="table table-bordered table-hover" id="mytable">
