--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
-<h1>Lista de Roles</h1>
+<h1>List of Roles</h1>
 
 @if (ViewBag.Message != null)
 {
