--- a/Views/Roles/ManageAccounts.cshtml
+++ b/Views/Roles/ManageAccounts.cshtml
@@ -39,7 +39,7 @@
     </dl>
     @if (!Model.EmailConfirmed)
     {
-        <a class="btn btn-primary" asp-action="Ativate" asp-route-id=@Model.Id>Activate</a>
+        <a class="btn btn-primary" asp-action="Ativate" asp-route-id=@Model.Id>Enable</a>
     }
     else
     {
