--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -40,8 +40,8 @@
                 <td>
                     @if (User.IsInRole("Admin"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.CategoryId"><img src="resources/edit.svg" width="5%" alt="Edit" /></a>
+                        <a asp-action="Delete" asp-route-id="@item.CategoryId"><img src="resources/delete.svg" width="5%" alt="Delete" /></a>
                     }
 
                     @if (User.IsInRole("Owner_Manager"))
