--- a/Views/CheckItems/Create.cshtml
+++ b/Views/CheckItems/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>CheckItem</h4>
+<h3>Add new checkItem in the checkList</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
