--- a/Views/Roles/Edit.cshtml
+++ b/Views/Roles/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Airbnb_PWEB.Models.ApplicationUser
 
 
-<h1>Editar dados</h1>
+<h1>Edit Profile</h1>
 
 <div class="col-md-4">
     <form asp-action="Edit">
@@ -25,8 +25,8 @@
         <div class="form-group">
         <label asp-for="FunctionRole"></label>
         <select asp-for="FunctionRole" class="form-control">
-            <option value="Client">Cliente</option>
-            <option value="Owner_Manager">Proprietário Imóvel</option>
+            <option value="Client">Client</option>
+            <option value="Owner_Manager">Owner_Manager</option>
         </select>
         </div>
 <div class="form-group">
