--- a/Views/Reservations/Index.cshtml
+++ b/Views/Reservations/Index.cshtml
@@ -12,7 +12,8 @@
         <strong></strong> @TempData["AlertMessage"]
 </div>
 }
-
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
     <table class="table" id="mytable">
         <thead>
             <tr>
@@ -152,6 +153,8 @@
             }
         </tbody>
     </table>
+    </div>
+    </div>
     @section Scripts{
         <script>
             $(document).ready(function () {
