--- a/Views/Properties/Create.cshtml
+++ b/Views/Properties/Create.cshtml
@@ -3,13 +3,11 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Property</h4>
+<h4>Create Property</h4>
 <hr />
-<div class="row">
-    <div class="col-md-5">
+<div class="card shadow mb-4 col-10">
+    <div  class="card-header py-3">
+        <div class ="card-body">
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -54,12 +52,15 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        </div>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
