--- a/Views/Properties/Delete.cshtml
+++ b/Views/Properties/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Property</h4>
+<hr />
+<div class="card shadow mb-4 col-10">
+    <div class="card-body">
     <hr />
         <img class="img-thumbnail" src="data:@Model.Images[0].FileType;base64,@Convert.ToBase64String(Model.Images[0].Data, 0, Model.Images[0].Data.Length)" style="width:250px;height:auto">
         <dl class="row">
@@ -61,4 +61,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+    </div>
 </div>
