--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h1>@Model.Tittle</h1>
-<br />
+<br/>
+
 <div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -82,6 +83,8 @@
     </body>
 
     <br />
+    <div class="card shadow mb-4 col-12">
+        <div class="card-body">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
@@ -175,7 +178,8 @@
 </div>
 <br />
 <br />
-
+</div>
+</div>
 
 <script>
   function updateMap() {
