Finish Front End

--- a/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Reset password confirmation";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+        <div class="card-header py-3">
+            <h1>@ViewData["Title"]</h1>
+            <p>
+                Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+            </p>
+        </div>
+    </div>
+</div>
