--- a/Views/CheckItems/CheckEdit.cshtml
+++ b/Views/CheckItems/CheckEdit.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>CheckItem</h4>
-
-
+<div class="card shadow mb-4 col-12">
+        <div class="card-header py-3">
 <form asp-action="CheckEdit">
 <table class="table">
     <thead>
@@ -47,6 +45,9 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
+</div>
+
+</div>
 </div>
 
 @section Scripts {
