--- a/Views/ClientEvaluations/Create.cshtml
+++ b/Views/ClientEvaluations/Create.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>ClientEvaluation</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4 col-8">
+    <div  class="card-header py-3">
+         <h4>Add Client Evaluation</h4>
+         <hr />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -21,12 +19,14 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
