--- a/Views/ClientEvaluations/Index.cshtml
+++ b/Views/ClientEvaluations/Index.cshtml
@@ -6,6 +6,9 @@
 
 <h1>Clients Evaluation</h1>
 
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+
 <table class="table" id="mytable">
     <thead>
         <tr>
@@ -41,6 +44,9 @@
         }
     </tbody>
 </table>
+
+</div>
+</div>
 @section Scripts{
     <script>
         $(document).ready(function () {
