--- a/Views/Evaluations/ListComments.cshtml
+++ b/Views/Evaluations/ListComments.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Airbnb_PWEB.Models.Evaluation>
 
 <h1>Property Reviews</h1>
-
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
 <table class="table" id="mytable">
     <thead>
         <tr>
@@ -33,6 +34,8 @@
         }
     </tbody>
 </table>
+</div>
+</div>
 @section Scripts{
     <script>
     $(document).ready(function () {
