--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="card-header py-3">
     @if (User.IsInRole("Owner_Manager"))
     {   <div>
-         <a class="m-0 font-weight-bold text-primary" asp-action="Create">Add Property</a>
+         <a class="btn btn-info" asp-action="Create">Add Property</a>
         </div>
     }
     </div>  
@@ -61,12 +61,12 @@
                 <td width="11%">
                     @if (User.IsInRole("Owner_Manager"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.Id"><img src="resources/edit.svg" width="30%" alt="Editar" /></a>
+                        <a asp-action="Edit" asp-route-id="@item.Id"><img src="resources/edit.svg" width="25%" alt="Editar" /></a>
                     }
-                    <a asp-action="Details" asp-route-id="@item.Id"><img src="resources/details.svg" width="30%" alt="Detalhes" /></a>
+                    <a asp-action="Details" asp-route-id="@item.Id"><img src="resources/details.svg" width="25%" alt="Detalhes" /></a>
                     @if (User.IsInRole("Owner_Manager"))
                     {
-                        <a asp-action="Delete" asp-route-id="@item.Id"><img src="resources/delete.svg" width="30%" alt="Remover" /></a>
+                        <a asp-action="Delete" asp-route-id="@item.Id"><img src="resources/delete.svg" width="25%" alt="Remover" /></a>
                     }
                     <p></p> 
                     @if (User.IsInRole("Owner_Employeer") || User.IsInRole("Owner_Manager") )
