--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -3,5 +3,10 @@
 @{
     ViewData["Title"] = "Confirm email";
 }
-
-<h1>@ViewData["Title"]</h1>
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+        <div class ="card-body">   
+            <h1>@ViewData["Title"]</h1>
+        </div>
+    </div>
+</div>
