--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,8 +4,13 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
-
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+        <div class ="card-body"> 
+            <h1>@ViewData["Title"]</h1>
+            <p>
+                Please check your email to reset your password.
+            </p>
+        </div>
+    </div>
+</div>
