--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,8 +6,9 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+        <div class ="card-body">
         <section>
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
@@ -47,6 +48,7 @@
                 </div>
             </form>
         </section>
+        </div>
     </div>
 </div>
 
