--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,20 +4,22 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Resend</button>
-        </form>
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
+        <div class ="card-body">    
+            <h1>@ViewData["Title"]</h1>
+            <h4>Enter your email.</h4> 
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Resend</button>
+                </form>
+        </div>
     </div>
 </div>
 
