--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4 col-4">
+    <div  class="card-header py-3">
+        <h4>Create Category</h4>
+        </div>
+        <div class ="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -21,9 +20,9 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+        </div>
+        <div>
+            <a asp-action="Index">Back to List</a>      
+        </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
