--- a/Views/CheckItems/Delete.cshtml
+++ b/Views/CheckItems/Delete.cshtml
@@ -4,22 +4,25 @@
     ViewData["Title"] = "Delete";
 }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CheckItem</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CheckItemId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="CheckLists" asp-action="Index">Back to List</a>
-    </form>
+<div class="card shadow mb-4 col-6">
+    <div  class="card-header py-3">
+        <div class="card-body">
+    <h4>Are you sure you want to delete this?</h3>
+        <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+            </dl>
+   
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="CheckItemId" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-controller="CheckLists" asp-action="Index">Back to List</a>
+        </form>
+        </div>
+    </div>
 </div>
