--- a/Views/CheckItems/Details.cshtml
+++ b/Views/CheckItems/Details.cshtml
@@ -4,27 +4,30 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>CheckItem</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckList)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckList.CheckListId)
-        </dd>
-    </dl>
-</div>
-<div>
+<hr>
+<div class="card shadow mb-4 col-10">
+    <div class="card-body">
+        <h1>Details</h1>
+        <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.CheckList)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.CheckList.CheckListId)
+                </dd>
+            </dl>
+                <div>
     <a asp-action="Edit" asp-route-id="@Model.CheckItemId">Edit</a> |
     <a asp-action="Index">Back to List</a>
+    </div>
+    </div>
 </div>
+
+
