--- a/Views/CheckLists/Create.cshtml
+++ b/Views/CheckLists/Create.cshtml
@@ -7,21 +7,24 @@
 <h1>Create</h1>
 
 <h4>CheckList</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4 col-6">
+    <div  class="card-header py-3">
+        <h4>Add New checkItem</h4>
+         <div class ="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        </div>
+        <div>
+    <a asp-action="Index">Back to List</a>
+    </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
