--- a/Views/CheckLists/Index.cshtml
+++ b/Views/CheckLists/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <h1>CheckList Categories</h1>
-
-<p></p>
+<div class="card shadow mb-4 col-12">
+      <div class="card-header py-3">
 <table class="table" id="mytable">
     <thead>
         <tr>
@@ -26,14 +26,16 @@
                     @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
                 <td>
-                    <a asp-controller="CheckItems" asp-action="Create" asp-route-id="@item.CheckListId"><img src="resources/add.png" width="4%" alt="Add Item" /></a>
-                    <a asp-controller="CheckItems" asp-action="Index" asp-route-id="@item.CheckListId"><img src="resources/details.svg" width="4%" alt="See Items" /></a>
+                    <a asp-controller="CheckItems" asp-action="Create" asp-route-id="@item.CheckListId">Add Item</a> |
+                    <a asp-controller="CheckItems" asp-action="Index" asp-route-id="@item.CheckListId">Details</a>
 
                 </td>
             </tr>
         }
     </tbody>
 </table>
+</div>
+</div>
 
 
 
