--- a/Views/ClientEvaluations/Delete.cshtml
+++ b/Views/ClientEvaluations/Delete.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ClientEvaluation</h4>
-    <hr />
+<hr />
+<div class="card shadow mb-4 col-10">
+   <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
@@ -24,4 +22,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+    </div>
 </div>
