--- a/Views/ClientEvaluations/Edit.cshtml
+++ b/Views/ClientEvaluations/Edit.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="card shadow mb-4 col-6">
+    <div  class="card-header py-3">
+        <h4>ClientEvaluation</h4>
 
-<h4>ClientEvaluation</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ClientEvaluationId" />
@@ -22,12 +20,14 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
+     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
