--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -2,6 +2,8 @@
 
 <h1>Company Employeers</h1>
 
+<div class="card shadow mb-4 col-12">
+    <div class="card-header py-3">
 <table class="table" id="mytable">
     <thead>
         <tr>
@@ -35,6 +37,8 @@
         }
     </tbody>
     </table>
+    </div>
+</div>
 @section Scripts{
     <script>
     $(document).ready(function () {
