--- a/Views/Evaluations/Create.cshtml
+++ b/Views/Evaluations/Create.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Evaluation</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4 col-6">
+    <div  class="card-header py-3">
+        <h4>Create Evaluation</h4>
+        </div>
+        <div class ="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -36,12 +35,15 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+
+        <div>
+            <a asp-controller="Reservations" asp-action="Index">Back to List</a>
+        </div>
+
+        </div>
 </div>
 
-<div>
-    <a asp-controller="Reservations" asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
