--- a/Views/Evaluations/Details.cshtml
+++ b/Views/Evaluations/Details.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Evaluation</h4>
-    <hr />
+<h1>Evaluation Details</h1>
+<br/>
+<div class="card shadow mb-4 col-12">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
@@ -23,8 +22,11 @@
             @Html.DisplayFor(model => model.Classification)
         </dd>
     </dl>
-</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.EvaluationId">Edit</a> |
     <a asp-action="Index">Back to List</a>
+</div>
+
+</div>
 </div>
