--- a/Views/Reservations/Create.cshtml
+++ b/Views/Reservations/Create.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>New Reservation</h4>
-<hr />
-<div class="card shadow mb-4 col-10">
+<div class="card shadow mb-4 col-4">
     <div  class="card-header py-3">
+        <h4>New Reservation</h4>
+        </div>
+        <div class="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -23,7 +22,7 @@
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Reservar" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
 
