--- a/Views/Reservations/Details.cshtml
+++ b/Views/Reservations/Details.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-<h4>Reservation</h4>
+<h1>Reservation Details</h1>
+<br/>
 <div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -80,13 +80,11 @@
         </script>
 
     </body>
-</div>
 
-
-
-<div>
-        <hr />
-        <dl class="row">
+<br/>
+<div class="card shadow mb-4 col-12">
+     <div class="card-body">
+             <dl class = "row">
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Property.Tittle)
             </dt>
@@ -123,7 +121,7 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CheckOut)
             </dd>
-        </dl>
+
         @if (@Model.ApprovalComment != null)
         {
             <dt class="col-sm-2">
@@ -133,11 +131,11 @@
                 @Html.DisplayFor(model => model.ApprovalComment)
             </dd>
         }
-
+  </dl>
         @if (User.IsInRole("Owner_Manager") || User.IsInRole("Owner_Employeer"))
         {
             <br />
-            <h4>Checkin Items</h4>
+            <h2>Checkin Items</h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -163,7 +161,7 @@
                     </tbody>
                 </table>
                 <br />
-                <h4>Checkout Items</h4>
+                <h2>Checkout Items</h2>
                 <table class="table">
                     <thead>
                         <tr>
@@ -193,7 +191,7 @@
 
                     @if (Model.ImagesReservation != null)
                     {
-                        <h4>Report Damage</h4>
+                        <h2>Report Damage</h2>
                         @foreach (var image in Model.ImagesReservation)
                         {
                             {
@@ -202,7 +200,6 @@
                         }
                     }
                 }
-    </div>
     <div>
         @if (User.IsInRole("Owner_Manager") || User.IsInRole("Owner_Employeer"))
         {
@@ -213,4 +210,7 @@
             <a asp-action="Index">Back to List</a>
         }
     </div>
-<br />
+    <br />
+    </div>
+    </div>
+</div>
