--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
-<h1>List of Roles</h1>
+<h1>Roles</h1>
 
 @if (ViewBag.Message != null)
 {
@@ -11,8 +11,9 @@
     </script>
 }
 
-<br />
-<table class="table table-bordered table-hover" id="mytable">
+<div class="card shadow mb-4 col-12">
+        <div class="card-header py-3">
+<table class="table" id="mytable">
 
     <thead>
         <tr>
@@ -33,9 +34,9 @@
         }
 
     </tbody>
-
-
 </table>
+</div>
+</div>
 @section Scripts{
     <script>
         $(document).ready(function () {
