--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <title>MyAirbnb</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="~/theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 
@@ -49,12 +49,12 @@
              @if (User.IsInRole("Admin"))
              {
              <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="" asp-controller="Categories" asp-action="Index">Categories
+                <a class="nav-link collapsed" asp-area="" asp-controller="Categories" asp-action="Index">
                     <span>Categories</span>
                 </a>
              </li>
              <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles
+                <a class="nav-link collapsed" asp-area="" asp-controller="Roles" asp-action="Index">
                     <span>AdminRoles</span>
                 </a>
              </li>
@@ -86,9 +86,13 @@
                  </a>
               </li>
               <li class="nav-item">
+                 <a class="nav-link collapsed" asp-area="" asp-controller="ClientEvaluations" asp-action="Index">
+                     <span>Clients Evaluation</span>
+                 </a>
+              </li>
+              <li class="nav-item">
                  <a class="nav-link collapsed"  data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
                     <span>Employeers</span>
                  </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
@@ -120,6 +124,9 @@
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -146,9 +153,6 @@
                                 </form>
                             </div>
                         </li>
-
-                        
-                        <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
