--- a/Views/CheckItems/Index.cshtml
+++ b/Views/CheckItems/Index.cshtml
@@ -3,13 +3,10 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Add CheckItem</h1>
+<h1>CheckList Items</h1>
 
 <div class="card shadow mb-4 col-12">
       <div class="card-header py-3">
-          <p>
-             <a class="btn btn-info" asp-action="Create">Create New Item</a>
-            </p>
 <table class="table" id="mytable">
     <thead>
         <tr>
