--- a/Views/Roles/Edit.cshtml
+++ b/Views/Roles/Edit.cshtml
@@ -4,35 +4,38 @@
 <div class="card shadow mb-4 col-12">
     <div  class="card-header py-3">
         <h4>Edit User Profile</h4>
-    <form asp-action="Edit">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Id" />
-        <div class="form-group">
-            <label asp-for="FirstName" class="control-label"></label>
-            <input asp-for="FirstName" class="form-control" />
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="LastName" class="control-label"></label>
-            <input asp-for="LastName" class="form-control" />
-            <span asp-validation-for="LastName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="PhoneNumber" class="control-label"></label>
-            <input asp-for="PhoneNumber" class="form-control" />
-            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-        <label asp-for="FunctionRole"></label>
-        <select asp-for="FunctionRole" class="form-control">
-            <option value="Client">Client</option>
-            <option value="Owner_Manager">Owner_Manager</option>
-        </select>
-        </div>
-        <div class="form-group">
-    <input type="submit" value="Save" asp-route-id="@Model.Id" class="btn btn-primary" />
-        </div>
-    </form>
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+
+            @if (!User.IsInRole("Owner_Manager")) {
+            <div class="form-group">
+                <label asp-for="FunctionRole"></label>
+                <select asp-for="FunctionRole" class="form-control">
+                    <option value="Client">Client</option>
+                    <option value="Owner_Manager">Owner_Manager</option>
+                </select>
+            </div>
+            }
+            <div class="form-group">
+                <input type="submit" value="Save" asp-route-id="@Model.Id" class="btn btn-primary" />
+            </div>
+        </form>
 
 
 <div>
