--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -2,40 +2,46 @@
 
 <h1>Roles</h1>
 
-@if (ViewBag.Message != null)
-{
-    <script type="text/javascript">
-            window.onload = function () {
-                alert("@ViewBag.Message");
-            };
-    </script>
-}
-
 <div class="card shadow mb-4 col-12">
-        <div class="card-header py-3">
-<table class="table" id="mytable">
+    <div class="card-header py-3">
 
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Details</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var role in Model)
+        @if (TempData["SuccessMessage"] != null)
         {
-            <tr>
-                <td>@role.Id</td>
-                <td>@role.Name</td>
-                <td><a class="btn btn-primary" asp-action="Details" asp-route-id="@role.Id">Details</a></td>
-            </tr>
-
+            <div class="alert alert-success">
+                <strong></strong> @TempData["SuccessMessage"]
+            </div>
         }
 
-    </tbody>
-</table>
-</div>
+        @if (TempData["AlertMessage"] != null)
+        {
+            <div class="alert alert-danger">
+                <strong></strong> @TempData["AlertMessage"]
+            </div>
+        }
+
+        <table class="table" id="mytable">
+
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var role in Model)
+                {
+                    <tr>
+                        <td>@role.Id</td>
+                        <td>@role.Name</td>
+                        <td><a class="btn btn-primary" asp-action="Details" asp-route-id="@role.Id">Details</a></td>
+                    </tr>
+
+                }
+
+            </tbody>
+        </table>
+    </div>
 </div>
 @section Scripts{
     <script>
